# DS4Linux

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
config/: default-config.json
crates/ds4linux-core/: Cargo.toml
crates/ds4linux-core/src/: lib.rs
crates/ds4linux-daemon/: Cargo.toml
crates/ds4linux-daemon/src/: main.rs
scripts/: install-daemon.sh  setup-usb-oc.sh  status.sh  uninstall-daemon.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
systemd/: ds4linuxd.service
ui/: index.html  main.js  styles.css
