[package]
name = "ds4linux-ui"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
ds4linux-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tokio.workspace = true
