[package]
name = "ds4linuxd"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ds4linux-core.workspace = true
evdev = "0.13"
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
